increase editor.short height to prevent content overflow on small screen

--- a/client/css/questions.less
+++ b/client/css/questions.less
@@ -160,7 +160,7 @@ a.editor {
   }
 }
 .editor.short{
-  min-height: 60px;
+  min-height: 100px;
   > div.editor-inner {
     min-height: 40px;
   }
